--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <div class="product-name">
                         <b>TÊNIS RUNNING PRO</b>
                     </div>
-                    <img src="https://via.placeholder.com/200x150.png?text=TÊNIS+RUNNING" width="200" height="150" alt="Tênis Running"><br>
+                    <img src="https://th.bing.com/th/id/R.d5440a68fb8a6aa2013819fc878b2510?rik=eRIaGWEC4jDk7g&pid=ImgRaw&r=0" width="200" height="150" alt="Tênis Running"><br>
                     <div class="price">
                         <b>R$ 299,90</b>
                     </div>
