--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="product-name">
                         <b>TÊNIS BASQUETEBALL</b>
                     </div>
-                    <img src="https://via.placeholder.com/200x150.png?text=TÊNIS+BASQUETE" width="200" height="150" alt="Tênis Basquete"><br>
+                    <img src="https://tse3.mm.bing.net/th/id/OIP.gx-ORo2unWxtCbXCBOQixwHaHa?rs=1&pid=ImgDetMain&o=7&rm=3" width="200" height="150" alt="Tênis Basquete"><br>
                     <div class="price">
                         <b>R$ 349,90</b>
                     </div>
