--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div class="product-name">
                         <b>TÊNIS CASUAL</b>
                     </div>
-                    <img src="https://via.placeholder.com/200x150.png?text=TÊNIS+CASUAL" width="200" height="150" alt="Tênis Casual"><br>
+                    <img src="https://m.media-amazon.com/images/I/71dnxG-laTL._AC_SX625_.jpg" width="200" height="150" alt="Tênis Casual"><br>
                     <div class="price">
                         <b>R$ 199,90</b>
                     </div>
